<?xml version="1.0"?>
<package>
  <name>uuv_thruster_manager</name>
  <version>0.0.0</version>
  <description>The thruster manager package</description>

  <maintainer email="Musa.Marcusso@de.bosch.com">Musa Morena Marcusso Manhaes</maintainer>
  <maintainer email="sebastian.scherer2@de.bosch.com">Sebastian Scherer</maintainer>
  <maintainer email="LuizRicardo.Douat@de.bosch.com">Luiz Ricardo Douat</maintainer>

  <author email="Musa.Marcusso@de.bosch.com">Musa Morena Marcusso Manhaes</author>
  <author email="sebastian.scherer2@de.bosch.com">Sebastian Scherer</author>
  <author email="LuizRicardo.Douat@de.bosch.com">Luiz Ricardo Douat</author>

  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>python-yaml</build_depend>
  <build_depend>uuv_gazebo_ros_plugins_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>

  <run_depend>std_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>python-yaml</run_depend>
  <run_depend>uuv_gazebo_ros_plugins_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>

</package>
