<?xml version="1.0"?>
<package>
  <name>uuv_trajectory_control</name>
  <version>0.0.0</version>
  <description>The uuv_trajectory_control package</description>

  <maintainer email="LuizRicardo.Douat@de.bosch.com">Luiz Ricardo Douat</maintainer>
  <maintainer email="Musa.Marcusso@de.bosch.com">Musa Morena Marcusso Manhaes</maintainer>
  <maintainer email="Sebastian.Scherer2@de.bosch.com">Sebastian Scherer</maintainer>

  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>python-numpy</build_depend>
  <build_depend>python-matplotlib</build_depend>
  <build_depend>python-yaml</build_depend>
  <build_depend>python-scipy</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>uuv_control_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>visualization_msgs</build_depend>

  <run_depend>rospy</run_depend>
  <run_depend>roslib</run_depend>
  <run_depend>python-numpy</run_depend>
  <run_depend>python-matplotlib</run_depend>
  <run_depend>python-yaml</run_depend>
  <run_depend>python-scipy</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>uuv_control_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>visualization_msgs</run_depend>

  <test_depend>rosunit</test_depend>
  <test_depend>rostest</test_depend>
  <export>
  </export>
</package>
