<?xml version="1.0"?>
<package format="2">
  <name>uuv_gazebo_ros_plugins</name>
  <version>0.6.13</version>
  <description>
      UUV Simulator's extended ROS plugins for generation of the necessary
      ROS services and topics during the simulation.
  </description>

  <maintainer email="musa.marcusso@de.bosch.com">Musa Morena Marcusso Manhaes</maintainer>
  <maintainer email="sebastian.scherer2@de.bosch.com">Sebastian Scherer</maintainer>
  <maintainer email="luizricardo.douat@de.bosch.com">Luiz Ricardo Douat</maintainer>

  <author email="musa.marcusso@de.bosch.com">Musa Morena Marcusso Manhaes</author>
  <author email="sebastian.scherer2@de.bosch.com">Sebastian Scherer</author>
  <author email="luizricardo.douat@de.bosch.com">Luiz Ricardo Douat</author>

  <license>Apache-2.0</license>
  <depend>uuv_gazebo_plugins</depend>
  <depend>uuv_gazebo_ros_plugins_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>roscpp</depend>
  <depend>visualization_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tf2</depend>
  <depend>gazebo_dev</depend>

  <test_depend>rosunit</test_depend>
  <test_depend>rostest</test_depend>
  <test_depend>xacro</test_depend>

  <buildtool_depend>catkin</buildtool_depend>
</package>
